@@ -77,4 +77,5 @@ c3f5285481a95fde3c1961595b4dd0311ee7ac1f  windows_app-20131201.tar.gz
 2ae13aa17d0dc95ce254a52f1dba10929763a10d  xz-java-1.2.tar.gz
 4530a1aa6f4498ee3d78d6000fa71a3f63bd077f  yices-1.0.28.tar.gz
 12ae71acde43bd7bed1e005c43034b208c0cba4c  z3-3.2.tar.gz
+3a8f77822278fe9250890e357248bc678d8fac95  z3-3.2-1.tar.gz
 d94a716502c8503d63952bcb4d4176fac8b28704  z3-4.0.tar.gz
