@@ -10,5 +10,5 @@ kodkodi-1.5.2
 polyml-5.5.1-1
 scala-2.10.3
 spass-3.8ds
-z3-3.2
+z3-3.2-1
 xz-java-1.2-1
